--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "@types/leaflet": "^1.9.20",
     "@types/react-resizable": "^3.0.8",
     "apexcharts": "^5.3.4",
     "geist": "^1.4.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.539.0",
+    "mqtt": "^5.14.0",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "19.1.0",
     "react-draggable": "^4.5.0",
+    "react-redux": "^9.2.0",
     "react-resizable": "^3.0.5"
   },
   "devDependencies": {
