--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.539.0",
     "mqtt": "^5.14.0",
-    "next": "15.4.6",
+    "next": "^15.5.2",
     "react": "19.1.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "19.1.0",
     "react-draggable": "^4.5.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "react-resizable": "^3.0.5"
+    "react-resizable": "^3.0.5",
+    "reactflow": "^11.11.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
